feat: Add Data JPA, Docker Compose, and Request/Response objects
- Integrated Spring Data JPA for database interactions.
- Added `compose.yml` for setting up Docker services (e.g., database container).
- Created request and response objects for handling API payloads:
  - Added DTOs for creating and responding to user, wallet, and transaction data.
- Improved project structure to support database operations and containerized environments.

These changes prepare the project for seamless deployment and structured API communication.

--- a/compose.yaml
+++ b/compose.yaml
@@ -1,1 +1,14 @@
 services:
+  mysql:
+    image: mysql:9.0.1
+    environment:
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_USER: pedro
+      MYSQL_PASSWORD: picpay
+    ports:
+      - "3306:3306"
+    volumes:
+      - picpay-db:/var/lib/mysql
+
+volumes:
+  picpay-db:
